1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add CREATING and USING tags where absent.

1998-04-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add documentation tags.

	* make-h2x: Insist that @deftype start at the beginning of a line.

1998-04-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.[hm]:  Add ProtocolViolation error symbol.

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Zone.m: Include string.h for memset.

	* defobj.m: Don't include nil_method redefinition unless we
	are using gcc >= 2.8.0.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.m: Reformatting throughout.
	(nil_method): New function.  

	* Zone.m: Include collections/List_Linked.h instead of
	collections.h.  Include misc.h instead of stdlib.h and memory.h.
	Reformatting throughout.
	([Zone -createEnd]): Use List_linked instead of List to make
	population. 

	* Program.m: Include misc.h instead of stdlib.h. 
	Reformatting throughout.

1998-04-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h (GetName): getName is factory method.
	(DefinedClass): All methods are factory methods.

	* DefObject.h (Object_s): Make it conform to DefinedClass protocol.

1998-03-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile ($(BINDIR)/m2h, $(BINDIR)/make-h2x): Ensure that
	there are execute permissions for installed versions.

1998-03-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Create.m ([CreateDrop_s -getObjectName]): In cygwin B19 case,
	don't prefix %p with 0x (it does it).

1998-02-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Create.m: Add PHASE(Using) before getIdName and getObjectName.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.m (nameToObject): New function.  Include <stdio.h>
	and objc/objc-api.h on its behalf.

	* defobj.h: Declare nameToObject function.

	* Makefile ($(INCDIR)/defobj.h): Remove target before copying
	to it.
